<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        style="@style/AppIntroLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            style="@style/AppIntroDefaultHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_hiding_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/summary_text"
            style="@style/AppIntroIconText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_hiding_summary"
            app:drawableStartCompat="@drawable/ic_hide_vector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/summary2_text"
            style="@style/AppIntroIconText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_hiding_summary2"
            app:drawableStartCompat="@drawable/ic_remove_red_eye_vector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/summary_text" />

        <TextView
            android:id="@+id/info_text"
            style="@style/AppIntroInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_hiding_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/summary2_text" />

        <TextView
            android:id="@+id/warning_text"
            style="@style/AppIntroDangerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_hiding_warning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
