<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    style="@style/AppIntroLayoutStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        style="@style/AppIntroDefaultHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_permission_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/summary_text"
        style="@style/AppIntroDefaultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_permission_summary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/enable_permission_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_margin"
        android:contentDescription="@string/intro_permission_button_permission_text"
        android:text="@string/intro_permission_button_permission_text"
        android:visibility="gone"
        app:icon="@drawable/ic_folder_open_vector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summary_text" />

    <TextView
        android:id="@+id/summary2_text"
        style="@style/AppIntroDefaultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_permission_summary2"
        android:textSize="@dimen/smaller_text_size"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enable_permission_button" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/system_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_margin"
        android:contentDescription="@string/intro_permission_button_settings_text"
        android:text="@string/intro_permission_button_settings_text"
        android:visibility="gone"
        app:icon="@drawable/ic_settings_vector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summary2_text" />

    <TextView
        android:id="@+id/permission_enabled_text"
        style="@style/AppIntroDefaultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_permission_permission_enabled"
        android:textColor="@color/md_green"
        android:textSize="@dimen/extra_big_text_size"
        android:textStyle="bold"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/ic_check_green_big"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summary_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
